# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel", "daemonize"]
build-backend = "setuptools.build_meta"

[project]
name = "pynodex"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A simple CLI process manager inspired by pm2."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
keywords = ["process", "manager", "cli", "pm2", "system", "monitoring"]
license = { file = "LICENSE" }

dependencies = [
    "Click",
    "psutil",
    "daemonize"
]

[project.urls]
Homepage = "https://github.com/yourusername/pynodex"
"Bug Tracker" = "https://github.com/yourusername/pynodex/issues"

[project.scripts]
pynodex = "pynodex.core:cli"
# CHANGE THIS LINE
pynodex_daemon_cli = "pynodex.daemon_cli:daemon_cli" # Now points inside the package
